--- a/modules/cocktails/cocktail–ws-impl/build.gradle
+++ b/modules/cocktails/cocktail–ws-impl/build.gradle
@@ -1,4 +1,10 @@
+apply plugin: "com.liferay.portal.tools.rest.builder"
+
 dependencies {
 	compileOnly group: "org.osgi", name: "org.osgi.core"
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations"
+
+	restBuilder group: "com.liferay", name: "com.liferay.portal.tools.rest.builder", version: "1.0.21"
+
 }
+
