--- a/modules/cocktails/cocktail–ws-impl/build.gradle
+++ b/modules/cocktails/cocktail–ws-impl/build.gradle
@@ -4,7 +4,8 @@ dependencies {
 	compileOnly group: "org.osgi", name: "org.osgi.core"
 	compileOnly group: "org.osgi", name: "org.osgi.service.component.annotations"
 
-	compileOnly group: "com.fasterxml.jackson.core", name: "jackson-annotations"
+
+	compileOnly group: "com.fasterxml.jackson.core", name: "jackson-annotations", version: "2.9.10"
 	compileOnly group: "com.liferay", name: "com.liferay.dynamic.data.mapping.api"
 	compileOnly group: "com.liferay", name: "com.liferay.journal.api"
 	compileOnly group: "com.liferay", name: "com.liferay.petra.function"
@@ -12,13 +13,16 @@ dependencies {
 	compileOnly group: "com.liferay", name: "com.liferay.portal.odata.api"
 	compileOnly group: "com.liferay", name: "com.liferay.portal.vulcan.api"
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel"
-	compileOnly group: "io.swagger.core.v3", name: "swagger-annotations"
-	compileOnly group: "javax.validation", name: "validation-api"
+	compileOnly group: "io.swagger.core.v3", name: "swagger-annotations", version: "2.0.5"
+	compileOnly group: "javax.validation", name: "validation-api", version: "2.0.1.Final"
 	compileOnly group: "javax.ws.rs", name: "javax.ws.rs-api"
-	compileOnly group: "org.apache.felix", name: "org.apache.felix.http.servlet-api"
-	compileOnly group: "org.osgi", name: "org.osgi.service.component"
+	compileOnly group: "org.apache.felix", name: "org.apache.felix.http.servlet-api", version: "1.1.2"
+	compileOnly group: "org.osgi", name: "org.osgi.service.component", version: "1.3.0"
 
 	restBuilder group: "com.liferay", name: "com.liferay.portal.tools.rest.builder", version: "1.0.21"
+
+	compileOnly project(":modules:cocktails:cocktail-ws-api")
+	compileOnly project(":modules:cocktails:cocktails-api")
 
 }
 
