--- a/gradle.properties
+++ b/gradle.properties
@@ -76,7 +76,7 @@ app.server.tomcat.version=9.0.33
     # Set the Liferay Portal Docker image to create your container from. The
     # default value points to Liferay Portal CE 7.3 GA1.
     #
-    liferay.workspace.docker.image.liferay=liferay/portal:7.2.1-ga2
+    #liferay.workspace.docker.image.liferay=liferay/portal:7.3.0-ga1
 
     #
     # Set the environment with the settings appropriate for current development.
@@ -85,7 +85,7 @@ app.server.tomcat.version=9.0.33
     # environment installation with those settings. There are five environments:
     # common, dev, docker, local, prod, and uat. The default value is "local".
     #
-    liferay.workspace.environment=docker
+    #liferay.workspace.environment=local
 
     #
     # Set the folder that contains the Liferay bundle downloaded from the
