--- a/configs/docker/portal-ext.properties
+++ b/configs/docker/portal-ext.properties
@@ -1,9 +1,11 @@
 include-and-override=portal-developer.properties
 
+redirect.url.ips.allowed=127.0.0.1,SERVER_IP,localhost,*
+
 #
 # MySQL
 #
 jdbc.default.driverClassName=com.mysql.cj.jdbc.Driver
-jdbc.default.url=jdbc:mysql://localhost:3306/devdb?useUnicode=true&characterEncoding=UTF-8&useFastDateParsing=false
+jdbc.default.url=jdbc:mysql://host.docker.internal:3306/devdb?useUnicode=true&characterEncoding=UTF-8&useFastDateParsing=false
 jdbc.default.username=root
 jdbc.default.password=root
