--- a/configs/docker/portal-setup-wizard.properties
+++ b/configs/docker/portal-setup-wizard.properties
@@ -6,7 +6,7 @@ company.default.web.id=liferay.com
 default.admin.email.address.prefix=test
 jdbc.default.driverClassName=com.mysql.cj.jdbc.Driver
 jdbc.default.password=root
-jdbc.default.url=jdbc:mysql://localhost:3306/devdb?characterEncoding=UTF-8&dontTrackOpenResources=true&holdResultsOpenOverStatementClose=true&serverTimezone=GMT&useFastDateParsing=false&useUnicode=true
+jdbc.default.url=jdbc:mysql://host.docker.internal:3306/devdb?characterEncoding=UTF-8&dontTrackOpenResources=true&holdResultsOpenOverStatementClose=true&serverTimezone=GMT&useFastDateParsing=false&useUnicode=true
 jdbc.default.username=root
 setup.wizard.add.sample.data=on
 setup.wizard.enabled=false
