--- a/configs/local/portal-ext.properties
+++ b/configs/local/portal-ext.properties
@@ -6,4 +6,4 @@ include-and-override=portal-developer.properties
 #jdbc.default.driverClassName=com.mysql.cj.jdbc.Driver
 #jdbc.default.url=jdbc:mysql://localhost/lportal?useUnicode=true&characterEncoding=UTF-8&useFastDateParsing=false
 #jdbc.default.username=root
-#jdbc.default.password=
+#jdbc.default.password=root
