--- a/modules/cocktails/build.gradle
+++ b/modules/cocktails/build.gradle
@@ -9,3 +9,12 @@ buildscript {
         }
     }
 }
+
+
+ext {
+    oltu_version = "1.0.1"
+    retrofit_version = "2.3.0"
+    swagger_annotations_version = "1.5.22"
+    junit_version = "4.13.1"
+    json_fire_version = "1.8.0"
+}
