feat(openapi) add oauth2 Support

--- a/configs/dev/portal-ext.properties
+++ b/configs/dev/portal-ext.properties
@@ -1,9 +1,14 @@
 include-and-override=portal-developer.properties
 
-#
-# MySQL
-#
-#jdbc.default.driverClassName=com.mysql.cj.jdbc.Driver
-#jdbc.default.url=jdbc:mysql://localhost/lportal?useUnicode=true&characterEncoding=UTF-8&useFastDateParsing=false
-#jdbc.default.username=root
-#jdbc.default.password=
+admin.email.from.address=test@liferay.com
+admin.email.from.name=Test Test
+company.default.locale=en_US
+company.default.time.zone=UTC
+company.default.web.id=liferay.com
+default.admin.email.address.prefix=test
+jdbc.default.driverClassName=com.mysql.cj.jdbc.Driver
+jdbc.default.password=root
+jdbc.default.url=jdbc:mysql://localhost/lportal72POC?characterEncoding=UTF-8&dontTrackOpenResources=true&holdResultsOpenOverStatementClose=true&serverTimezone=GMT&useFastDateParsing=false&useUnicode=true&enabledTLSProtocols=TLSv1.2
+jdbc.default.username=root
+liferay.home=/Users/guillaumelenoir/Documents/Github/liferay-workspace-72/bundles
+setup.wizard.enabled=false
