--- a/gradle.properties
+++ b/gradle.properties
@@ -85,7 +85,7 @@ app.server.tomcat.version=9.0.33
     # environment installation with those settings. There are five environments:
     # common, dev, docker, local, prod, and uat. The default value is "local".
     #
-    liferay.workspace.environment=docker
+    liferay.workspace.environment=dev
 
     #
     # Set the folder that contains the Liferay bundle downloaded from the
